# moto-hses

./: .gitignore  .gitmodules  .release-plz.toml  Cargo.toml  README.md  cliff.toml  rustfmt.toml
.cursor/: BUGBOT.md  hooks.json
.cursor/commands/: add-skills.md  commit.md  create-branch.md  create-plan.md  create-pr.md  prepare-release.md  run-all-tests.md  run-background-agent.md  run-fmt-and-clippy.md  run-security-audit.md
.cursor/hooks/: run-fmt-and-clippy.sh
.cursor/plans/: 0x300-plural-io-command-1912404a.plan.md  0x301-plural-register-command-663489d7.plan.md  0x302-plural-b-variable-command-de4a0b07.plan.md  0x303-plural-i-variable-a0448b26.plan.md  0x304-plural-d-variable-d04aaac7.plan.md  0x305-plural-r-variable-76e4ac83.plan.md  0x306-plural-s-variable-3ca1b338.plan.md  0x84-cycle-mode-command-fe580e51.plan.md  0x86-job-start-command-f46a9182.plan.md  0x87-job-select-command-278f5b28.plan.md  refactor-multiple-variables-156f2fb7.plan.md
.cursor/rules/: coding-standards.mdc  commit-message-rules.mdc  development-rules.mdc  documentation-rules.mdc  implementation-rules.mdc  moto-hses-development-rules.mdc  pre-push-and-pr-rules.mdc
.github/: pull_request_template.md
.github/workflows/: create-tag.yml  gate-of-main.yml  integration-tests.yml  release.yml  rust-tests.yml  security-audit.yml
docs/adr/: 0001-adopt-hses.md  0001-use-async-trait-for-thread-safe-client.md
docs/design/: api-design.md  architecture.md  client-api.md  error-handling.md  implementation-guide.md  protocol-commands.md
docs/implementation/: client-implementation.md
docs/implementation-plans/: 0x84-cycle-mode-switching-command.md  README.md
docs/ops/: ci-cd-setup.md
docs/specs/: hses-protocol.md
docs/test/: integration-test-migration.md  testing-strategy.md  traceability-matrix.md
moto-hses-client/: CHANGELOG.md  Cargo.toml  README.md
moto-hses-client/examples/: alarm_operations.rs  basic_usage.rs  byte_variable_operations.rs  connection_management.rs  cycle_mode_control.rs  double_variable_operations.rs  file_operations.rs  hold_servo_control.rs  integer_variable_operations.rs  io_operations.rs  job_select.rs  job_start.rs  position_operations.rs  read_executing_job_info.rs  read_status.rs  real_variable_operations.rs  register_operations.rs  shared_client.rs  string_variable_operations.rs  variable_operations.rs
moto-hses-client/src/: connection.rs  convenience.rs  impl_traits.rs  lib.rs  protocol.rs  shared.rs  tests.rs  traits.rs  types.rs
moto-hses-client/tests/: integration_tests.rs
moto-hses-client/tests/common/: mock_server_setup.rs  mod.rs  test_logging.rs  test_utils.rs
moto-hses-client/tests/integration/: alarm_operations.rs  connection_management.rs  cycle_mode_control.rs  file_operations.rs  hold_servo_control.rs  io_operations.rs  job_control.rs  mod.rs  position_operations.rs  read_executing_job_info.rs  read_status.rs  register_operations.rs  shared_client.rs  variable_operations.rs
moto-hses-mock/: CHANGELOG.md  Cargo.toml  README.md
moto-hses-mock/examples/: basic_usage.rs  mock_basic_usage.rs
moto-hses-mock/src/: handlers.rs  lib.rs  server.rs  state.rs
moto-hses-mock/src/handlers/: alarm.rs  cycle_mode_switching.rs  file.rs  io.rs  job.rs  mod.rs  position.rs  register.rs  registry.rs  system.rs  variable.rs
moto-hses-mock/tests/: integration_test.rs  protocol_communication_tests.rs
moto-hses-proto/: CHANGELOG.md  Cargo.toml  README.md
moto-hses-proto/src/: alarm.rs  commands.rs  constants.rs  cycle_mode.rs  encoding.rs  encoding_utils.rs  error.rs  file.rs  job.rs  lib.rs  message.rs  position.rs  status.rs  tests.rs  types.rs  variables.rs
moto-hses-proto/src/commands/: alarm.rs  command_trait.rs  cycle_mode.rs  file.rs  io.rs  job.rs  mod.rs  position.rs  register.rs  servo.rs  status.rs  variable.rs
moto-hses-proto/src/payload/: alarm.rs  job.rs  mod.rs  payload_trait.rs  position.rs  status.rs  variable.rs
scripts/: README.md  integration_test.sh  integration_test.toml  run-e2e-local.sh
