[workspace]
members = [
    "moto-hses-proto",
    "moto-hses-client",
    "moto-hses-mock",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["masayuki-kono@mamezou.com"]

[workspace.dependencies]
bytes = "1.6"
thiserror = "1"
tokio = { version = "1.39", features = ["net", "rt-multi-thread", "macros", "time"] }