[workspace]
members = [
    "moto-hses-proto",
    "moto-hses-client",
    "moto-hses-mock",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
authors = ["masayuki-kono@mamezou.com"]

[workspace.dependencies]
bytes = "1.10"
thiserror = "1.0"
tokio = { version = "1.47", features = ["net", "rt-multi-thread", "macros", "time", "sync"] }
futures = "0.3"
log = "0.4"
tokio-test = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8"
async-trait = "0.1"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
dbg_macro = "deny"
print_stdout = "deny"
