[package]
name = "moto-hses-client"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
moto-hses-proto = { path = "../moto-hses-proto" }
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
moto-hses-mock = { path = "../moto-hses-mock" }
env_logger = "0.11"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[[example]]
name = "read_status"
path = "examples/read_status.rs"

[[example]]
name = "alarm_operations"
path = "examples/alarm_operations.rs"

[[example]]
name = "variable_operations"
path = "examples/variable_operations.rs"

[[example]]
name = "position_operations"
path = "examples/position_operations.rs"

[[example]]
name = "connection_management"
path = "examples/connection_management.rs"

[[example]]
name = "file_operations"
path = "examples/file_operations.rs"

[[example]]
name = "register_operations"
path = "examples/register_operations.rs"

[[example]]
name = "io_operations"
path = "examples/io_operations.rs"

[[example]]
name = "read_executing_job_info"
path = "examples/read_executing_job_info.rs"

[[example]]
name = "hold_servo_control"
path = "examples/hold_servo_control.rs"
