[package]
name = "moto-hses-client"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
description = "Async UDP client for Yaskawa High-Speed Ethernet Server (HSES) communication"
authors = ["masayuki-kono@mamezou.com"]
repository = "https://github.com/masayuki-kono/moto-hses"
homepage = "https://github.com/masayuki-kono/moto-hses"
documentation = "https://docs.rs/moto-hses-client"
keywords = ["yaskawa", "robot", "hses", "ethernet", "client"]
categories = ["network-programming", "asynchronous", "hardware-support"]
readme = "README.md"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
moto-hses-proto = { version = "0.0.1", path = "../moto-hses-proto" }
futures = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
moto-hses-mock = { version = "0.0.1", path = "../moto-hses-mock" }
env_logger = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true

[[example]]
name = "read_status"
path = "examples/read_status.rs"

[[example]]
name = "alarm_operations"
path = "examples/alarm_operations.rs"

[[example]]
name = "variable_operations"
path = "examples/variable_operations.rs"

[[example]]
name = "position_operations"
path = "examples/position_operations.rs"

[[example]]
name = "connection_management"
path = "examples/connection_management.rs"

[[example]]
name = "file_operations"
path = "examples/file_operations.rs"

[[example]]
name = "register_operations"
path = "examples/register_operations.rs"

[[example]]
name = "io_operations"
path = "examples/io_operations.rs"

[[example]]
name = "read_executing_job_info"
path = "examples/read_executing_job_info.rs"

[[example]]
name = "hold_servo_control"
path = "examples/hold_servo_control.rs"
