[package]
name = "moto-hses-client"
version = "0.3.2"
edition = "2024"
license = "Apache-2.0"
description = "Async UDP client for Yaskawa High-Speed Ethernet Server (HSES) communication"
authors = ["masayuki-kono@mamezou.com"]
repository = "https://github.com/masayuki-kono/moto-hses"
homepage = "https://github.com/masayuki-kono/moto-hses"
documentation = "https://docs.rs/moto-hses-client"
keywords = ["yaskawa", "robot", "hses", "ethernet", "client"]
categories = ["network-programming", "asynchronous", "hardware-support"]
readme = "README.md"

[dependencies]
moto-hses-proto = { version = "0.3", path = "../moto-hses-proto" }
moto-hses-mock = { version = "0.3", path = "../moto-hses-mock" }
tokio = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
env_logger = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true

[[example]]
name = "read_status"
path = "examples/read_status.rs"

[[example]]
name = "alarm_operations"
path = "examples/alarm_operations.rs"

[[example]]
name = "byte_variable_operations"
path = "examples/byte_variable_operations.rs"

[[example]]
name = "integer_variable_operations"
path = "examples/integer_variable_operations.rs"

[[example]]
name = "double_variable_operations"
path = "examples/double_variable_operations.rs"

[[example]]
name = "real_variable_operations"
path = "examples/real_variable_operations.rs"

[[example]]
name = "string_variable_operations"
path = "examples/string_variable_operations.rs"

[[example]]
name = "position_operations"
path = "examples/position_operations.rs"

[[example]]
name = "file_operations"
path = "examples/file_operations.rs"

[[example]]
name = "register_operations"
path = "examples/register_operations.rs"

[[example]]
name = "io_operations"
path = "examples/io_operations.rs"

[[example]]
name = "read_executing_job_info"
path = "examples/read_executing_job_info.rs"

[[example]]
name = "hold_servo_control"
path = "examples/hold_servo_control.rs"

[[example]]
name = "shared_client"
path = "examples/shared_client.rs"
