[package]
name = "moto-hses-mock"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
description = "Local mock server for HSES (UDP) used in E2E tests"

[dependencies]
tokio = { workspace = true }
moto-hses-proto = { path = "../moto-hses-proto" }
log = "0.4"
env_logger = "0.11"

[lints]
workspace = true

[[example]]
name = "mock_basic_usage"
path = "examples/mock_basic_usage.rs"

[dev-dependencies]
tokio-test = "0.4"