[package]
name = "moto-hses-mock"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "Mock HSES UDP server for testing and development"
authors = ["masayuki-kono@mamezou.com"]
repository = "https://github.com/masayuki-kono/moto-hses"
homepage = "https://github.com/masayuki-kono/moto-hses"
documentation = "https://docs.rs/moto-hses-mock"
keywords = ["yaskawa", "robot", "hses", "ethernet", "mock"]
categories = ["development-tools", "network-programming"]
readme = "README.md"

[dependencies]
moto-hses-proto = { version = "0.1.1", path = "../moto-hses-proto" }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true

[[example]]
name = "mock_basic_usage"
path = "examples/mock_basic_usage.rs"
