[package]
name = "moto-hses-proto"
version = "0.3.4"
edition = "2024"
license = "Apache-2.0"
description = "Protocol definitions and serialization for Yaskawa High-Speed Ethernet Server (HSES)"
authors = ["masayuki-kono@mamezou.com"]
repository = "https://github.com/masayuki-kono/moto-hses"
homepage = "https://github.com/masayuki-kono/moto-hses"
documentation = "https://docs.rs/moto-hses-proto"
keywords = ["yaskawa", "robot", "hses", "ethernet", "serialization"]
categories = ["network-programming", "encoding", "hardware-support"]
readme = "README.md"

[dependencies]
bytes = { workspace = true }
thiserror = { workspace = true }
encoding_rs = { workspace = true }

[lints]
workspace = true
